[gd_scene load_steps=9 format=2]

[ext_resource path="res://Cell/Cells/Inner/0.png" type="Texture" id=1]
[ext_resource path="res://Cell/Cells/Outer/0.png" type="Texture" id=2]
[ext_resource path="res://Cell/Cell.gd" type="Script" id=3]
[ext_resource path="res://Cell/Outer.gd" type="Script" id=4]
[ext_resource path="res://Cell/Deadly.png" type="Texture" id=5]
[ext_resource path="res://Cell/OK.png" type="Texture" id=6]
[ext_resource path="res://Cell/OutOfTime.png" type="Texture" id=7]

[sub_resource type="CircleShape2D" id=1]
radius = 450.0

[node name="Cell" type="Node2D"]
script = ExtResource( 3 )

[node name="Outer" type="Sprite" parent="."]
texture = ExtResource( 2 )
script = ExtResource( 4 )

[node name="BlobContainer" type="Node2D" parent="Outer"]
show_behind_parent = true

[node name="Inner" type="Sprite" parent="Outer"]
texture = ExtResource( 1 )

[node name="Focus" type="Area2D" parent="Outer"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Outer/Focus"]
shape = SubResource( 1 )

[node name="Deadly" type="Sprite" parent="."]
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 5 )

[node name="OK" type="Sprite" parent="."]
visible = false
position = Vector2( 102.122, 113.223 )
texture = ExtResource( 6 )

[node name="OOT" type="Sprite" parent="."]
visible = false
position = Vector2( 113.776, 118.52 )
scale = Vector2( 0.692756, 0.692756 )
texture = ExtResource( 7 )
[connection signal="input_event" from="Outer/Focus" to="." method="_on_Focus_input_event"]
[connection signal="mouse_entered" from="Outer/Focus" to="." method="_on_Focus_mouse_entered"]
[connection signal="mouse_exited" from="Outer/Focus" to="." method="_on_Focus_mouse_exited"]
